--- a/lol-doku-frontend/src/app.html
+++ b/lol-doku-frontend/src/app.html
@@ -4,11 +4,19 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="%sveltekit.assets%/lol.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/doku.css" />
 		<style>
 			body {
-				font-family: Verdana, sans-serif;
 				margin: 0;
-				background-color: #e5e5e5;
+				background-color: rgb(212, 212, 223);
+    			color: var(--lol-hextech-black);
+			}
+
+			:focus {
+				/* outline: 1px solid var(--lol-blue-1);
+				outline-offset: -1px; */
+				outline: 0;
 			}
 		</style>
 		%sveltekit.head%
