Rebranded to LolProGrid. Added BG toggle to rule modal

--- a/lol-doku-frontend/src/app.html
+++ b/lol-doku-frontend/src/app.html
@@ -9,7 +9,7 @@
 		<style>
 			body {
 				margin: 0;
-				background-color: rgb(212, 212, 223);
+				background-color: var(--lol-doku-white-1);
     			color: var(--lol-hextech-black);
 			}
 
