Added Footer to FE. Improved styling

--- a/lol-doku-frontend/src/app.html
+++ b/lol-doku-frontend/src/app.html
@@ -6,11 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="%sveltekit.assets%/lol.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/doku.css" />
+		<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script> 
 		<style>
 			body {
 				margin: 0;
 				background-color: var(--lol-doku-white-1);
     			color: var(--lol-hextech-black);
+			}
+
+			a:visited {
+				color: var(--lol-blue-3)
+			}
+
+			a:not(visited) {
+				color: var(--lol-gold-4)
 			}
 
 			:focus {
